--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 /* css styles */
-#title-block-header.quarto-title-block .quarto-title-meta {
+#title-block-header.quarto-title-block.default .quarto-title-meta {
   color: rgba(255, 255, 255, 0.8);
 }
 
@@ -50,7 +50,7 @@
     min-height: 350px; /* Or match the height above */
 }
 
-/* Hide the title block header without the quarto-title-block class */
+/* Hide the title block header without the quarto-title-block class
 #title-block-header:not(.quarto-title-block) {
   display: none !important;
-}
+}  */
